Fix colour contrast of links.

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -20,7 +20,7 @@ $border-color: rgba(0, 0, 0, 0.1) !default; // rgba recommended if using feature
 
 // Typography colours
 $text-color: #383838 !default;
-$link-color: rgb(57, 111, 192) !default;
+$link-color: #3165b5 !default;
 $selection-color: #D4D4D4 !default; // visible when highlighting text
 
 // Header colours
